# FTXUI_Template

./: CMakeLists.txt  README.md
doc/: .doxygen-config
src/: CMakeLists.txt  index.html  main.cpp
src/core/: CMakeLists.txt  templatetui.cpp  templatetui.hpp
src/util/: CMakeLists.txt  util.cpp  util.hpp
